--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,4 +1,4 @@
 dbc.driver = com.mysql.jdbc.Driver
-jdbc.url = jdbc:mysql://localhost:3306/personal_website_ssm?characterEncoding=utf-8
+jdbc.url = jdbc:mysql://localhost:3306/personal_website?characterEncoding=utf-8
 jdbc.username = root
 jdbc.password = 2518wtqi
